--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net461" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net461" />
   <package id="NUnit" version="3.13.2" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="4.0.0" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net461" />
